881. Boats to Save People (#148)
Signed-off-by: Andrey Morozov <github@anmorozov.com>