@@ -1,16 +1,12 @@
 package com.anmorozov.leetcode.problems.solutions.p0841;
 
-import java.util.HashSet;
-import java.util.LinkedList;
-import java.util.List;
-import java.util.Queue;
-import java.util.Set;
+import java.util.*;
 
 public class MyApproach1 implements Solution {
 
     @Override
     public boolean canVisitAllRooms(List<List<Integer>> rooms) {
-        Queue<Integer> actualKey = new LinkedList<>(rooms.get(0));
+        Queue<Integer> actualKey = new LinkedList<>(rooms.getFirst());
         Set<Integer> visitedRooms = new HashSet<>();
         visitedRooms.add(0);
         while (!actualKey.isEmpty()) {
